--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,59 @@
 [tool.poetry]
-name = "the_census"
-version = "1.0.3"
-description = "Tool to get and query US Census data"
 authors = ["Joel Krim <drawjk705@gmail.com>"]
 classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
-keywords = ["US", "census"]
-readme = "README.md"
+description = "Tool to get and query US Census data"
 homepage = "https://github.com/drawjk705/us-stats/"
+keywords = ["US", "census"]
+name = "the_census"
+readme = "README.md"
 repository = "https://github.com/drawjk705/us-stats/"
+version = "1.0.3"
 
 [tool.poetry.dependencies]
-python = "^3.9"
 pandas = "^1.2.0"
-requests = "^2.25.1"
 punq = "^0.4.1"
-tqdm = "^4.55.1"
+python = "^3.9"
 python-dotenv = "^0.15.0"
+requests = "^2.25.1"
+tqdm = "^4.55.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.1"
 black = { version = "^20.8b1", allow-prereleases = true }
-pytest-mock = "^3.5.0"
 callee = "^0.3.1"
-hypothesis = "^6.0.2"
-pytest-sugar = "^0.9.4"
-pytest-clarity = "^0.3.0-alpha.0"
-pytest-cov = "^2.10.1"
 data-science-types = "^0.2.22"
-pytest-randomly = "^3.5.0"
-poethepoet = "^0.9.0"
-pytest-tldr = "^0.2.2"
-jupyter_nbextensions_configurator = "^0.4.1"
+hypothesis = "^6.0.2"
 ipython = "^7.19.0"
-jupyterlab = "^3.0.1"
 ipywidgets = "^7.6.2"
 isort = "^5.7.0"
-autohooks = "2.0.0"
+jupyter_nbextensions_configurator = "^0.4.1"
+jupyterlab = "^3.0.1"
+poethepoet = "^0.9.0"
+pre-commit = "^2.9.3"
+pytest = "^6.2.1"
+pytest-clarity = "^0.3.0-alpha.0"
+pytest-cov = "^2.10.1"
+pytest-mock = "^3.5.0"
+pytest-randomly = "^3.5.0"
+pytest-sugar = "^0.9.4"
+pytest-tldr = "^0.2.2"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+
 
 [tool.poe.tasks]
-test = "pytest -m \"not integration\""
-test-integration = "pytest -m integration"
-test-coverage = "pytest --cov-report term-missing:skip-covered --cov=the_census tests/"
-typing = "pyright --outputjson	"
-lint-fix = "black . --exclude typings"
-lint = "black . --check --exclude typings"
-sort-imports = "isort ."
 clean = "rm rf ./**/__pycache__"
+lint = "black . --check --exclude typings"
+lint-fix = "black . --exclude typings"
+precommit-update = 'pre-commit autoupdate'
+sort-imports = "isort ."
+test = "pytest -m \"not integration\""
+test-coverage = "pytest --cov-report term-missing:skip-covered --cov=the_census tests/"
+test-integration = "pytest -m integration"
+typing = "pyright --outputjson"
 
 [tool.isort]
 profile = "black"
-src_paths = ["the_census", "tests"]
 skip_glob = '**/typings/**'
-
-
-[tool.autohooks]
-mode = "poetry"
+src_paths = ["the_census", "tests"]
