--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ requires = ["poetry-core>=1.0.0"]
 clean = "rm rf ./**/__pycache__"
 lint = "black . --check --exclude typings"
 lint-fix = "black . --exclude typings"
-precommit-update = 'pre-commit autoupdate'
+precommit-run = "pre-commit run --all-files"
+precommit-update = "pre-commit autoupdate"
 sort-imports = "isort ."
 test = "pytest -m \"not integration\""
 test-coverage = "pytest --cov-report term-missing:skip-covered --cov=the_census tests/"
@@ -55,5 +56,5 @@ typing = "pyright --outputjson"
 
 [tool.isort]
 profile = "black"
-skip_glob = '**/typings/**'
+skip_glob = "**/typings/**"
 src_paths = ["the_census", "tests"]
