--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,13 @@ jobs:
               uses: actions/checkout@v2.3.4
               with:
                   ref: jk-test
+                  token: ${{ secrets.TEST_ADMIN_TOKEN }}
 
             - name: push to the branch
               run: |
                   date > test.txt
-                  git config user.name drawjk705
-                  git config user.email drawjk705@gmail.com
+                  git config --global user.name drawjk705
+                  git config --global user.email drawjk705@gmail.com
                   git add --all
                   git commit -am 'chore: this is a test'
                   git push --force
