--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,12 @@ jobs:
               run: |
                   echo "::set-output name=exists::1"
 
+            - name: check for dependabot build(deps-dev)
+              id: dependabot-build-deps-dev
+              if: "startsWith(github.event.pull_request.title, 'build(deps-dev): "
+              run: |
+                  echo "::set-output name=exists=1"
+
             - name: check for prerelease
               id: prerelease
               if: "startsWith(github.event.pull_request.title, 'prerelease: ')"
@@ -182,9 +188,9 @@ jobs:
 
             - name: enforce
               run: |
-                  if [ -z "$IS_MAJOR" ] && [ -z "$IS_MINOR" ] && [ -z "$IS_PATCH" ] && [ -z "$IS_CHORE" ] && [ -z "$IS_PRERELEASE" ];
+                  if [ -z "$IS_MAJOR" ] && [ -z "$IS_MINOR" ] && [ -z "$IS_PATCH" ] && [ -z "$IS_CHORE" ] && [ -z "$IS_PRERELEASE" && [ -z "$IS_DEPENDABOT_BUILD_DEPS_DEV" ]];
                   then
-                    echo "PR must be prefixes with one of the following: ['breaking: ', 'feat: ', 'fix: ', 'chore: ', prerelease: ']"
+                    echo "PR must be prefixes with one of the following: ['breaking: ', 'feat: ', 'fix: ', 'chore: ', prerelease: ', 'build(deps-dev): ']"
                     exit 1
                   fi
               env:
@@ -193,9 +199,10 @@ jobs:
                   IS_PATCH: ${{ steps.patch.outputs.exists }}
                   IS_CHORE: ${{ steps.chore.outputs.exists }}
                   IS_PRERELEASE: ${{ steps.prerelease.outputs.exists }}
+                  IS_DEPENDABOT_BUILD_DEPS_DEV: ${{ steps.dependabot-build-deps-dev.exists }}
 
     trigger-release:
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !startsWith(github.event.head_commit.message, 'chore') }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !startsWith(github.event.head_commit.message, 'chore') && !startsWith(github.event.head_commit.message, 'build(deps-dev)') }}
         needs: [test, lint, build]
         runs-on: ubuntu-latest
         steps:
