--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.pythonPath": ".venv/bin/python3"
+    "python.pythonPath": ".venv/bin/python3",
+    "cSpell.words": [
+        "build",
+        "dependabot",
+        "deps",
+        "dev",
+        "is"
+    ]
 }
