--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,13 @@ jobs:
             - name: try build
               run: poetry build
 
+    get-branch-name:
+        runs-on: ubuntu-latest
+        steps:
+            - run: echo $CONTEXT
+              env:
+                  CONTEXT: ${{ toJson(github) }}
+
     enforce-title:
         if: github.event_name == 'pull_request'
         runs-on: ubuntu-latest
