--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
                   startsWith(github.event.head_commit.message, 'fix') ||
                   startsWith(github.event.head_commit.message, 'prerelease')
                 ) &&
-                github.event.commits.*author.*name == 'dependabot-preview[bot]'
+                github.event.commits.*.author.*.name == 'dependabot-preview[bot]'
               }}
         needs: [test, lint, build]
         runs-on: ubuntu-latest
