--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,6 @@ on:
             - main
 
 jobs:
-    echo-it:
-        runs-on: ubuntu-latest
-        steps:
-            - run: echo $CONTEXT
-              env:
-                  CONTEXT: ${{ toJson(github) }}
-
     lint:
         runs-on: ubuntu-latest
         strategy:
@@ -148,7 +141,7 @@ jobs:
               run: poetry build
 
     enforce-title:
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && github.event.pull_request.user.login != 'dependabot-preview[bot]'
         runs-on: ubuntu-latest
         steps:
             - name: echo title
@@ -187,15 +180,9 @@ jobs:
               run: |
                   echo "::set-output name=exists::1"
 
-            - name: check if dependabot build-dev
-              id: dependabot-build-dev
-              if: "github.event.pull_request.user.login == 'dependabot-preview[bot]' && startsWith(github.event.pull_request.title, 'build(deps-dev): ')"
-              run: |
-                  echo "::set-output name=exists::1"
-
             - name: enforce
               run: |
-                  if [ -z "$IS_MAJOR" ] && [ -z "$IS_MINOR" ] && [ -z "$IS_PATCH" ] && [ -z "$IS_CHORE" ] && [ -z "$IS_PRERELEASE" ] && [ -z "$IS_DEPENDABOT_BUILD_DEV" ];
+                  if [ -z "$IS_MAJOR" ] && [ -z "$IS_MINOR" ] && [ -z "$IS_PATCH" ] && [ -z "$IS_CHORE" ] && [ -z "$IS_PRERELEASE" ];
                   then
                     echo "PR must be prefixes with one of the following: ['breaking: ', 'feat: ', 'fix: ', 'chore: ', prerelease: ']"
                     exit 1
@@ -206,7 +193,6 @@ jobs:
                   IS_PATCH: ${{ steps.patch.outputs.exists }}
                   IS_CHORE: ${{ steps.chore.outputs.exists }}
                   IS_PRERELEASE: ${{ steps.prerelease.outputs.exists }}
-                  IS_DEPENDABOT_BUILD_DEV: ${{ steps.dependabot-build-dev.outputs.exists }}
 
     trigger-release:
         if: >-
@@ -217,7 +203,8 @@ jobs:
                   startsWith(github.event.head_commit.message, 'feat') || 
                   startsWith(github.event.head_commit.message, 'fix') ||
                   startsWith(github.event.head_commit.message, 'prerelease')
-                )
+                ) &&
+                github.event.commits.*.author.*.name != 'dependabot-preview[bot]'
               }}
         needs: [test, lint, build]
         runs-on: ubuntu-latest
