fix: trigger release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,9 @@ jobs:
               run: poetry build
 
     enforce-title:
-        if: github.event_name == 'pull_request' && github.event.pull_request.user.login != 'dependabot-preview[bot]'
+        if: >-
+            github.event_name == 'pull_request' &&
+            github.event.pull_request.user.login != 'dependabot-preview[bot]'
         runs-on: ubuntu-latest
         steps:
             - name: echo title
