--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,11 +44,13 @@ jobs:
                   BUMP_TYPE: ${{ github.event.inputs.bump_type }}
 
             - name: poetry publish to pypi
-              if: ${{ secrets.TEST_ONLY == 0 }}
               run: |
-                  poetry build
-                  poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-                  poetry publish
+                  if ${{ secrets.TEST_ONLY}}=0
+                  then
+                      poetry build
+                      poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
+                      poetry publish
+                  fi
 
             - name: poetry publish to pypi-test
               run: |
