feat: testpypi failures don't break release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,7 @@ jobs:
                   fi
 
             - name: poetry publish to pypi-test
+              continue-on-error: true
               run: |
                   poetry build
                   poetry config repositories.testpypi https://test.pypi.org/legacy/
