--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -231,7 +231,7 @@ jobs:
             - name: check for patch
               id: patch
               if: >-
-                  "startsWith(github.event.head_commit.message, 'fix: ')" ||
+                  startsWith(github.event.head_commit.message, 'fix: ') ||
                   github.event.commits.*.author.*.name == 'dependabot-preview[bot]'
               run: |
                   echo "bump_type=patch" >> $GITHUB_ENV
