fix: setting up staging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
         "dependabot",
         "deps",
         "dev",
-        "is"
+        "is",
+        "publish",
+        "pypi",
+        "test",
+        "to"
     ]
 }
