--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,13 +1,12 @@
 name: Staging
 
 on:
-    push:
+    create:
         tags:
             - 'v*.*.*'
 
 jobs:
     publish-to-test-pypi:
-        if: ${{ github.event.ref == 'refs/head/main'}}
         environment: Staging
         runs-on: ubuntu-latest
 
