--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,9 +1,9 @@
 name: Staging
 
 on:
-    create:
+    push:
         tags:
-            - 'v*.*.*'
+            - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
     publish-to-test-pypi:
