--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,46 +1,54 @@
 name: Staging
 
 on:
-    push:
-        branches:
-            - 'refs/tags/v**'
+    create:
+    # push:
+    #     branches:
+    #         - 'refs/tags/v**'
 
 jobs:
-    publish-to-test-pypi:
+    testing:
+        # publish-to-test-pypi:
         environment: Staging
         runs-on: ubuntu-latest
 
         steps:
-            - name: checkout repo
-              uses: actions/checkout@v2
+            - name: context
+              run: echo ${CTXT}
+              env:
+                  CTXT: ${{ toJson(github) }}
 
-            - name: set up python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: 3.9
+    #     steps:
+    #         - name: checkout repo
+    #           uses: actions/checkout@v2
 
-            - name: install poetry
-              uses: snok/install-poetry@v1.1.1
-              with:
-                  version: 1.1.4
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
+    #         - name: set up python
+    #           uses: actions/setup-python@v2
+    #           with:
+    #               python-version: 3.9
 
-            - name: load cached venv
-              id: cached-poetry-dependencies
-              uses: actions/cache@v2
-              with:
-                  path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
+    #         - name: install poetry
+    #           uses: snok/install-poetry@v1.1.1
+    #           with:
+    #               version: 1.1.4
+    #               virtualenvs-create: true
+    #               virtualenvs-in-project: true
 
-            - name: install poetry dependencies
-              run: poetry install
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+    #         - name: load cached venv
+    #           id: cached-poetry-dependencies
+    #           uses: actions/cache@v2
+    #           with:
+    #               path: .venv
+    #               key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
 
-            - name: poetry publish to pypi-test
-              continue-on-error: true
-              run: |
-                  poetry build
-                  poetry config repositories.testpypi https://test.pypi.org/legacy/
-                  poetry config pypi-token.testpypi ${{ secrets.PYPI_TEST_TOKEN }}
-                  poetry publish -r testpypi
+    #         - name: install poetry dependencies
+    #           run: poetry install
+    #           if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+
+    #         - name: poetry publish to pypi-test
+    #           continue-on-error: true
+    #           run: |
+    #               poetry build
+    #               poetry config repositories.testpypi https://test.pypi.org/legacy/
+    #               poetry config pypi-token.testpypi ${{ secrets.PYPI_TEST_TOKEN }}
+    #               poetry publish -r testpypi
