fix: this maybe

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,9 +2,7 @@ name: Staging
 
 on:
     create:
-    # push:
-    #     branches:
-    #         - 'refs/tags/v**'
+        tags:
 
 jobs:
     testing:
