--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,6 +1,11 @@
 name: Staging
 
 on:
+    push:
+        branches:
+            - main
+        tags:
+            - '**'
     create:
         tags:
 
