--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,58 +1,44 @@
 name: Staging
 
 on:
-    push:
-        branches:
-            - main
-
-        tags:
-            - '**'
-    create:
-        tags:
+    workflow_dispatch:
 
 jobs:
-    testing:
-        # publish-to-test-pypi:
+    publish-to-test-pypi:
         environment: Staging
         runs-on: ubuntu-latest
 
         steps:
-            - name: context
-              run: echo ${CTXT}
-              env:
-                  CTXT: ${{ toJson(github) }}
+            - name: checkout repo
+              uses: actions/checkout@v2
 
-    #     steps:
-    #         - name: checkout repo
-    #           uses: actions/checkout@v2
+            - name: set up python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: 3.9
 
-    #         - name: set up python
-    #           uses: actions/setup-python@v2
-    #           with:
-    #               python-version: 3.9
+            - name: install poetry
+              uses: snok/install-poetry@v1.1.1
+              with:
+                  version: 1.1.4
+                  virtualenvs-create: true
+                  virtualenvs-in-project: true
 
-    #         - name: install poetry
-    #           uses: snok/install-poetry@v1.1.1
-    #           with:
-    #               version: 1.1.4
-    #               virtualenvs-create: true
-    #               virtualenvs-in-project: true
+            - name: load cached venv
+              id: cached-poetry-dependencies
+              uses: actions/cache@v2
+              with:
+                  path: .venv
+                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
 
-    #         - name: load cached venv
-    #           id: cached-poetry-dependencies
-    #           uses: actions/cache@v2
-    #           with:
-    #               path: .venv
-    #               key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
+            - name: install poetry dependencies
+              run: poetry install
+              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
-    #         - name: install poetry dependencies
-    #           run: poetry install
-    #           if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-
-    #         - name: poetry publish to pypi-test
-    #           continue-on-error: true
-    #           run: |
-    #               poetry build
-    #               poetry config repositories.testpypi https://test.pypi.org/legacy/
-    #               poetry config pypi-token.testpypi ${{ secrets.PYPI_TEST_TOKEN }}
-    #               poetry publish -r testpypi
+            - name: poetry publish to pypi-test
+              continue-on-error: true
+              run: |
+                  poetry build
+                  poetry config repositories.testpypi https://test.pypi.org/legacy/
+                  poetry config pypi-token.testpypi ${{ secrets.PYPI_TEST_TOKEN }}
+                  poetry publish -r testpypi
