--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -299,3 +299,4 @@ jobs:
                   token: ${{ secrets.STAGING_TRIGGER_TOKEN }}
                   type: workflow
                   ident: staging.yml
+                  payload: '{}'
