--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ tqdm = "^4.55.1"
 black = { version = "^20.8b1", allow-prereleases = true }
 callee = "^0.3.1"
 data-science-types = "^0.2.22"
+flake8 = "^3.8.4"
 hypothesis = "^6.0.2"
 ipython = "^7.19.0"
 ipywidgets = "^7.6.2"
@@ -36,7 +37,6 @@ pytest-mock = "^3.5.0"
 pytest-randomly = "^3.5.0"
 pytest-sugar = "^0.9.4"
 pytest-tldr = "^0.2.2"
-flake8 = "^3.8.4"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -59,3 +59,8 @@ typing = "pyright"
 profile = "black"
 skip_glob = "**/typings/**"
 src_paths = ["the_census", "tests"]
+
+[flake8]
+exclude = ['typings']
+extend-ignore = ['E203', 'W503']
+max-line-length = 88
