chore: tweak staging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -311,4 +311,4 @@ jobs:
                   token: ${{ secrets.STAGING_TRIGGER_TOKEN }}
                   type: workflow
                   ident: staging.yml
-                  payload: '{}'
+                  payload: '{ "tag": "${{ env.version }}" }'
