--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest-mock = "^3.5.0"
 pytest-randomly = "^3.5.0"
 pytest-sugar = "^0.9.4"
 pytest-tldr = "^0.2.2"
+jedi = "0.17.2"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
