--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/drawjk705/us-stats/"
 version = "2.1.0"
 
 [tool.poetry.dependencies]
+jedi = "0.17.2"
 pandas = "^1.2.0"
 punq = "^0.4.1"
 python = "^3.9"
