--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -228,6 +228,12 @@ jobs:
             - name: checkout repo
               uses: actions/checkout@v2
 
+            - name: update README TOC
+              run: |
+                  curl https://raw.githubusercontent.com/ekalinin/github-markdown-toc/master/gh-md-toc -o gh-md-toc
+                  chmod a+x gh-md-toc
+                  ./gh-md-toc --insert --no-backup README.md
+
             - name: set up python
               uses: actions/setup-python@v2
               with:
