--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ requires = ["poetry-core>=1.0.0"]
 
 [tool.poe.tasks]
 clean = "rm rf ./**/__pycache__"
+generate-toc = "gh-md-toc --insert README.md"
 lint = "black . --check --exclude typings"
 lint-fix = "black . --exclude typings"
 precommit-run = "pre-commit run --all-files"
