--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -228,6 +228,7 @@ jobs:
             - name: checkout repo
               uses: actions/checkout@v2
 
+            # source https://github.com/ekalinin/github-markdown-toc#toc-generation-with-github-actions
             - name: update README TOC
               run: |
                   curl https://raw.githubusercontent.com/ekalinin/github-markdown-toc/master/gh-md-toc -o gh-md-toc
